--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -26,6 +26,7 @@
               </div>
             </label>
             <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
+              <li><a [routerLink]="'/profile'">Profile</a></li>
               <li><a [routerLink]="'/logout'">Logout</a></li>
             </ul>
           </div>
