--- a/src/app/print-curriculum/print-curriculum.component.html
+++ b/src/app/print-curriculum/print-curriculum.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col p-14 gap-4 h-full bg-base-300">
+<div class="flex flex-col p-14 gap-4 h-full min-h-screen bg-base-300">
   <div class="flex flex-col justify-center">
     <h1 class="text-4xl font-bold text-center">
       {{ (curriculum$ | async)?.department?.name }}
