--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,22 +49,22 @@
       </div>
 
       <div class="stat text-center">
-        <div class="stat-title">Draft Curriculums</div>
+        <div class="stat-title">Drafts</div>
         <div class="stat-value">{{ drafts }}</div>
       </div>
 
       <div class="stat text-center">
-        <div class="stat-title">Under Review Curriculums</div>
+        <div class="stat-title">Under Review</div>
         <div class="stat-value">{{ review }}</div>
       </div>
 
       <div class="stat text-center">
-        <div class="stat-title">Approved Curriculums</div>
+        <div class="stat-title">Approved</div>
         <div class="stat-value">{{ approved }}</div>
       </div>
 
       <div class="stat text-center">
-        <div class="stat-title">Rejected Curriculums</div>
+        <div class="stat-title">Rejected</div>
         <div class="stat-value">{{ rejected }}</div>
       </div>
     </div>
