--- a/src/app/approved-curriculums/approved-curriculums.component.html
+++ b/src/app/approved-curriculums/approved-curriculums.component.html
@@ -22,6 +22,13 @@
             (click)="onViewCurriculum(curriculum?.id ?? -1)">
             View
           </button>
+          <div class="tooltip"
+            data-tip="Note: Adjust the printing properties such as orientation and scaling before printing. Example: Set the scaling to custom and adjust it to the recommended scale of 50%">
+            <a class="btn btn-info rounded-2xl text-info-content" [routerLink]="getLink(curriculum?.id ?? -1)"
+              target="_blank">
+              Print
+            </a>
+          </div>
         </div>
       </div>
     </app-curriculum-card>
