--- a/src/app/department-management/department-management.component.html
+++ b/src/app/department-management/department-management.component.html
@@ -37,7 +37,7 @@
             <td></td>
             <td class="text-base">{{ department.code }}</td>
             <td class="text-base">{{ department.name }}</td>
-            <td class="text-base">{{ department.description }}</td>
+            <td class="text-xs prose">{{ department.description }}</td>
             <td class="space-x-4 justify-center items-center text-center">
               <button
                 class="btn btn-secondary bg-secondary text-secondary-content"
