--- a/src/app/subject-management/subject-management.component.html
+++ b/src/app/subject-management/subject-management.component.html
@@ -35,7 +35,7 @@
               {{ subject.title }}
             </span>
           </td>
-          <td class="text-base">{{ subject.description }}</td>
+          <td class="text-xs prose">{{ subject.description }}</td>
           <td class="text-base">{{ subject.units }}</td>
           <td class="text-base">{{ subject.hours }}</td>
           <td class="text-base">{{ subject.prerequisite?.code ?? '' }}</td>
