--- a/src/app/department-management/department-management.component.html
+++ b/src/app/department-management/department-management.component.html
@@ -1,23 +1,13 @@
 <div class="flex flex-col m-5">
   <div class="flex items-center">
     <div class="flex tabs ml-5">
-      <a
-        class="tab tab-lg tab-lifted"
-        [ngClass]="{ 'tab-active': tab === 'active' }"
-        (click)="tab = 'active'"
-        >Departments</a
-      >
-      <a
-        class="tab tab-lg tab-lifted"
-        [ngClass]="{ 'tab-active': tab === 'archive' }"
-        (click)="tab = 'archive'"
-        >Archived</a
-      >
+      <a class="tab tab-lg tab-lifted" [ngClass]="{ 'tab-active': tab === 'active' }"
+        (click)="tab = 'active'">Departments</a>
+      <a class="tab tab-lg tab-lifted" [ngClass]="{ 'tab-active': tab === 'archive' }"
+        (click)="tab = 'archive'">Archived</a>
     </div>
     <div class="ml-auto flex">
-      <label (click)="openCreateDepartmentModal()" class="btn btn-wide m-4"
-        >CREATE A DEPARTMENT</label
-      >
+      <label (click)="openCreateDepartmentModal()" class="btn btn-wide m-4">CREATE A DEPARTMENT</label>
     </div>
   </div>
   <div class="flex overflow-x-auto w-full h-full p-5 shadow-lg bg-base-100 rounded-lg">
@@ -28,7 +18,6 @@
             <th></th>
             <th>Code</th>
             <th>Department</th>
-            <th>Description</th>
             <th></th>
           </tr>
         </thead>
@@ -37,17 +26,18 @@
             <td></td>
             <td class="text-base">{{ department.code }}</td>
             <td class="text-base">{{ department.name }}</td>
-            <td class="text-xs prose">{{ department.description }}</td>
             <td class="space-x-4 justify-center items-center text-center">
-              <button
-                class="btn btn-secondary bg-secondary text-secondary-content"
+              <button class="btn btn-secondary bg-secondary text-secondary-content"
                 (click)="select(department.id); openUpdateDepartmentModal()">
                 edit
               </button>
-              <button
-                class="btn btn-error bg-error text-error-content"
+              <button class="btn btn-error bg-error text-error-content"
                 (click)="select(department.id); openDeleteDepartmentModal()">
                 delete
+              </button>
+              <button class="btn btn-info bg-info text-info-content"
+                (click)="select(department.id); openDescriptionModal()">
+                Description
               </button>
             </td>
           </tr>
@@ -73,8 +63,7 @@
             <td class="text-base">{{ department.name }}</td>
             <td class="text-base">{{ department.description }}</td>
             <td class="space-x-4 justify-center items-center text-center">
-              <button
-                class="btn btn-secondary bg-secondary text-secondary-content"
+              <button class="btn btn-secondary bg-secondary text-secondary-content"
                 (click)="select(department.id); restore()">
                 restore
               </button>
@@ -87,43 +76,22 @@
 </div>
 
 <!-- CREATE MODAL -->
-<label
-  for="my-modal-4"
-  class="modal modal-bottom sm:modal-middle cursor-pointer"
+<label for="my-modal-4" class="modal modal-bottom sm:modal-middle cursor-pointer"
   [ngClass]="{ 'modal-open': createDepartmentModalState }">
   <label class="modal-box relative" for="">
-    <label
-      for="my-modal-4"
-      (click)="closeCreateDepartmentModal()"
-      class="btn btn-sm btn-circle absolute right-2 top-2"
-      >✕</label
-    >
+    <label for="my-modal-4" (click)="closeCreateDepartmentModal()"
+      class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
     <div class="flex">
-      <form
-        [formGroup]="form"
-        class="flex h-full w-full items-center justify-center">
-        <div
-          class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
+      <form [formGroup]="form" class="flex h-full w-full items-center justify-center">
+        <div class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
           <h1 class="text-4xl font-bold mb-6">Create New Department</h1>
-          <input
-            type="text"
-            formControlName="code"
-            placeholder="Code"
+          <input type="text" formControlName="code" placeholder="Code"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <input
-            type="text"
-            formControlName="name"
-            placeholder="Name"
+          <input type="text" formControlName="name" placeholder="Name"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <input
-            type="text"
-            formControlName="description"
-            placeholder="Description"
+          <input type="text" formControlName="description" placeholder="Description"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <button
-            class="btn w-full max-w-xs"
-            type="submit"
-            (click)="submitCreateDepartment()">
+          <button class="btn w-full max-w-xs" type="submit" (click)="submitCreateDepartment()">
             CREATE
           </button>
         </div>
@@ -133,43 +101,22 @@
 </label>
 
 <!-- UPDATE MODAL -->
-<label
-  for="my-modal-4"
-  class="modal modal-bottom sm:modal-middle cursor-pointer"
+<label for="my-modal-4" class="modal modal-bottom sm:modal-middle cursor-pointer"
   [ngClass]="{ 'modal-open': updateDepartmentModalState }">
   <label class="modal-box relative" for="">
-    <label
-      for="my-modal-4"
-      (click)="closeUpdateDepartmentModal()"
-      class="btn btn-sm btn-circle absolute right-2 top-2"
-      >✕</label
-    >
+    <label for="my-modal-4" (click)="closeUpdateDepartmentModal()"
+      class="btn btn-sm btn-circle absolute right-2 top-2">✕</label>
     <div class="flex">
-      <form
-        [formGroup]="form"
-        class="flex h-full w-full items-center justify-center">
-        <div
-          class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
+      <form [formGroup]="form" class="flex h-full w-full items-center justify-center">
+        <div class="flex flex-col rrounded-lg p-20 items-center justify-center gap-8 bg-base-100">
           <h1 class="text-4xl font-bold mb-6">Update Department Record</h1>
-          <input
-            type="text"
-            formControlName="code"
-            placeholder="Code"
+          <input type="text" formControlName="code" placeholder="Code"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <input
-            type="text"
-            formControlName="name"
-            placeholder="Name"
+          <input type="text" formControlName="name" placeholder="Name"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <input
-            type="text"
-            formControlName="description"
-            placeholder="Description"
+          <input type="text" formControlName="description" placeholder="Description"
             class="input input-bordered input-neutral w-full max-w-xs" />
-          <button
-            class="btn w-full max-w-xs"
-            type="submit"
-            (click)="submitUpdateDepartment()">
+          <button class="btn w-full max-w-xs" type="submit" (click)="submitUpdateDepartment()">
             UPDATE
           </button>
         </div>
@@ -178,19 +125,26 @@
   </label>
 </label>
 
+<!-- Description MODAL -->
+<div class="modal cursor-pointer" [ngClass]="{ 'modal-open': descriptionModalState }">
+  <div class="modal-box" for="" *ngIf="selectDepartment$ | async as department">
+    <h3 class="font-bold text-lg">Department Description</h3>
+    <p class="mt-2">{{department.description}}</p>
+    <div class="modal-action">
+      <label class="btn" (click)="closeDescriptionModal()">OK</label>
+    </div>
+  </div>
+</div>
+
 <!-- DELETE MODAL -->
 <input type="checkbox" id="delete-modal" class="modal-toggle" />
-<div
-  class="modal cursor-pointer"
-  [ngClass]="{ 'modal-open': deleteDepartmentModalState }">
+<div class="modal cursor-pointer" [ngClass]="{ 'modal-open': deleteDepartmentModalState }">
   <div class="modal-box" for="">
     <h3 class="font-bold text-lg">Delete Department</h3>
     <p class="py-4">Are you sure you want to delete this record?</p>
     <div class="modal-action">
       <label class="btn" (click)="submitDeleteDepartment()">CONFIRM</label>
-      <label class="btn btn-outline" (click)="closeDeleteDepartmentModal()"
-        >CANCEL</label
-      >
+      <label class="btn btn-outline" (click)="closeDeleteDepartmentModal()">CANCEL</label>
     </div>
   </div>
 </div>
