--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,48 +1,51 @@
-<div class="flex min-h-screen h-full min-w-full bg-base-200 justify-center">
-  <div class="flex flex-col justify-center items-center sm:p-20 gap-2">
+<div class="flex min-h-screen min-w-screen bg-base-100 justify-center w-full">
+  <div class="flex flex-col gap-2 items-center justify-center">
     <div class="flex flex-wrap py-10">
-      <h1 class="text-6xl text-center font-bold">
-        Curriculum Management System
+      <h1 class="text-4xl text-center font-bold">
+        CICT - Curriculum Management System
       </h1>
     </div>
-    <form [formGroup]="form">
-      <div
-        class="flex flex-col shadow rounded-lg w-[500px] h-[500px] p-4 items-center justify-center gap-4 bg-base-100">
-        <input
-          type="text"
-          formControlName="email"
-          placeholder="Enter email"
-          class="input input-bordered input-neutral w-full max-w-xs" />
-        <input
-          type="password"
-          formControlName="password"
-          placeholder="Enter password"
-          class="input input-bordered input-neutral w-full max-w-xs" />
-        <div
-          class="flex flex-row gap-4 items-center w-full max-w-xs justify-between">
+    <div class="flex flex-col shadow-lg rounded-lg w-[500px] h-[500px] p-4 items-center justify-center gap-4 bg-base-100">
+      <h1 class="text-xl text-center font-bold">
+        Login
+      </h1>
+      <form [formGroup]="form">
+        <div class="form-control max-w-md">
+          <label class="label">
+            <span class="label-text">
+              Email Address
+            </span>
+          </label>
+          <input type="text" formControlName="email" placeholder="Enter email"
+            class="input input-bordered input-neutral min-w-[300px]" />
+        </div>
+        <div class="form-control">
+          <label class="label">
+            <span class="label-text">
+              Password
+            </span>
+          </label>
+          <input type="password" formControlName="password" placeholder="Enter password"
+            class="input input-bordered input-neutral min-w-[300px]" />
+        </div>
+        <div class="flex flex-row gap-4 items-center max-w-md justify-between">
           <div class="flex">
             <label class="label cursor-pointer gap-4">
-              <input
-                formControlName="remember"
-                type="checkbox"
-                checked="checked"
-                class="checkbox checkbox-success" />
+              <input formControlName="remember" type="checkbox" checked="checked" class="checkbox checkbox-success" />
               <span class="label-text">Remember me</span>
             </label>
           </div>
           <div>
-            <a class="link">Forgot password?</a>
+            <a class="link" [routerLink]="'/forgot-password'">Forgot password?</a>
           </div>
         </div>
         <label class="label" *ngIf="submitted && invalid">
-          <span class="text-error label-text-alt"
-            >Invalid credentails! Try again</span
-          >
+          <span class="text-error label-text-alt">Invalid credentails! Try again</span>
         </label>
         <button class="btn w-full max-w-xs" type="submit" (click)="onSubmit()">
           Login
         </button>
-      </div>
-    </form>
+      </form>
+    </div>
   </div>
 </div>
