--- a/src/app/shared/layouts/sidebar.component.html
+++ b/src/app/shared/layouts/sidebar.component.html
@@ -39,7 +39,12 @@
     <label for="my-drawer-2" class="drawer-overlay"></label>
     <ul class="menu p-4 w-80 bg-base-200 text-base-content">
       <div class="flex flex-col gap-4 mt-5">
-        <li class="text-2xl font-bold">CICT Curriculum Management System</li>
+        <li class="text-2xl font-bold">
+          <p>
+            <img src="assets/icons/CICT.png" alt="logo" class="w-10 h-10 rounded-full">
+            CICT-CMS
+          </p>
+        </li>
         <li *ngFor="let nav of TopSideNavItems">
           <a [routerLink]="nav.link" [routerLinkActive]="'bg-primary text-primary-content'">{{ nav.label }}</a>
         </li>
