--- a/src/app/forgot-password/forgot-password.component.html
+++ b/src/app/forgot-password/forgot-password.component.html
@@ -13,9 +13,14 @@
           </label>
           <input type="email" class="input input-bordered" placeholder="Enter your email" formControlName="email">
         </div>
+        <div class="flex flex-col gap-4">
         <button type="submit" class="btn btn-neutral" (click)="onSubmit()">
           Send Password Reset Link
         </button>
+        <button class="btn btn-ghost" [routerLink]="'/login'">
+          Back to Login
+        </button>
+        </div>
       </form>
     </div>
   </div>
