--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,13 @@
 <div class="flex min-h-screen min-w-screen bg-base-100 justify-center w-full">
   <div class="flex flex-col gap-2 items-center justify-center">
-    <div class="flex flex-wrap py-10">
-      <h1 class="text-4xl text-center font-bold">
-        CICT - Curriculum Management System
-      </h1>
-    </div>
-    <div class="flex flex-col shadow-lg rounded-lg w-[500px] h-[500px] p-4 items-center justify-center gap-4 bg-base-100">
-      <h1 class="text-xl text-center font-bold">
-        Login
-      </h1>
+    <div
+      class="flex flex-col shadow-lg rounded-lg p-20 items-center justify-center gap-4 bg-base-100">
+      <img src="/assets/icons/CICT.png" class="h-[200px] w-[200px]">
+      <div class="flex flex-wrap">
+        <h1 class="text-4xl text-center font-bold">
+          CICT - CMS
+        </h1>
+      </div>
       <form [formGroup]="form">
         <div class="form-control max-w-md">
           <label class="label">
